..F....... [ZBX-11209] Fixed broken alignment of filter elements
git-svn-id: svn://svn.zabbix.com/branches/dev@62911 f4e7fd02-d210-4e34-a1e0-d4093fb66cc2

--- a/ZBX-11209/sass/stylesheets/sass/screen.scss
+++ b/ZBX-11209/sass/stylesheets/sass/screen.scss
@@ -994,6 +994,14 @@ footer {
 	select {
 		vertical-align: top;
 	}
+
+	.table-forms .table-forms-td-right {
+
+		td {
+			padding: 0 5px 5px 0;
+			vertical-align: middle;
+		}
+	}
 }
 
 .multiselect-wrapper {
